--- a/style.css
+++ b/style.css
@@ -273,6 +273,141 @@ ul li:hover ~ .cursor {
     cursor: pointer;
 
 }
+/*POPUP2*/
+.popup2 {
+    position: absolute;
+    top: -150%;
+    left: 50%;
+    opacity: 0%;
+    transform: translate(-50%, -50%) scale(1.25);
+    width: 380px;
+    padding: 20px 30px ;
+    background: #a7bcb9;
+    color: black;
+    text-shadow: none;
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    transition:top 0ms ease-in-out 200ms,
+            opacity 200ms ease-in-out 0ms,
+            transform 200ms ease-in-out 0ms;
+}
+
+.popup2.active {
+    top: 210%;
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+    transition:top 0ms ease-in-out 0ms,
+            opacity 200ms ease-in-out 0ms,
+            transform 200ms ease-in-out 0ms;
+}
+.popup2 .close-btn{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    height: 33px;
+    width: 35px;
+    font-size: 67px;
+    background: #24527a;
+    color: #eee;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 20px;
+    
+    cursor: pointer;
+    
+}
+
+.popup2 .form h2{
+    text-align: center;
+    color: #222;
+    margin: 10px 0px 20px;
+    font-size: 35px;
+}
+
+.popup2 .form .form-element{
+    margin:10px 15px  ;
+
+}
+
+.popup2 .form .form-element label{
+    font-size: 19px;
+    color: #222;
+    font-weight: 600;
+
+}
+
+.popup2 .form .form-element input[type="text"],
+.popup2 .form .form-element input[type="password"] {
+    margin-top: 5px;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    outline: none;
+    border: 1px solid #aaa;
+    border-radius: 5px;
+}
+
+.popup2 .form .form-element input [type="checkbox"] {
+    margin-top: 5px;
+}
+
+.popup2 .form .form-element button {
+    width: 100%;
+    height: 40px;
+    border: none;
+    outline: none;
+    margin-left: 10px;
+    margin-top: 20px;
+    cursor: pointer;
+
+}
+/*swiper*/
+
+.swiper {
+    width: 100%;
+    padding-top: 45px;
+    padding-bottom: 75px;
+    border-radius: 20px;
+  }
+
+  .swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 150px;
+    height: 150px;
+    box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
+  filter: blur(2px);
+    border-radius: 20px;
+    text-align: center;
+    font-size: 22px;
+    
+
+    
+    
+  }
+  .swiper-slide-active {
+    filter: blur(0);
+    border-radius: 20px;
+  }
+  
+.swiper-slide.swiper-slide-active a {
+  display: block;
+  width: 150px;
+  height: 150px;
+  filter: blur(0);
+  border-radius: 20px;
+  
+}
+.swiper-slide img{
+    width: 150px;
+  height: 150px; 
+  border-radius: 20px;
+}
+
+  
+  
+
+
 /*content part*/ 
 
 .content {
@@ -285,7 +420,7 @@ ul li:hover ~ .cursor {
     
     
 }
-.content h3{
+.content h2{
     font-size: 46px;
     font-weight: bolder;
     text-align: center;
