--- a/books/books.css
+++ b/books/books.css
@@ -6,7 +6,10 @@ body {
     align-items: center;
     padding:0px;
     margin:0px;
-    cursor: url(authors/iconmonstr-pen-16.svg);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)) no-repeat fixed, 
+                url(images/BG1.jpg) no-repeat center center fixed ;
+                background-size:cover;
+  
     
 }
 
@@ -23,7 +26,7 @@ header, footer, img {
     text-shadow:0px 0px 5px black,
                 0px 0px 20px black,
                 0px 0px 40px black; 
-                cursor: url(authors/iconmonstr-pen-16.svg);
+                
                 
 }
 
